<resources>
    <string name="app_name">Domaca Zadaca 1</string>
    <string name="add">Add</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_hint">Please add some contacts</string>
    <string name="add_subtitle">Create a new person</string>
    <string name="name_hint">Ivo</string>
    <string name="surname_hint">Ivic</string>
    <string name="age_hint">20</string>
    <string name="faculty_hint">TVZ</string>
    <string name="oib_hint">1234567891234</string>
    <string name="label_name">Name</string>
    <string name="label_surname">Surname</string>
    <string name="label_age">Age</string>
    <string name="label_faculty">Faculty</string>
    <string name="label_oib">OIB</string>
    <string name="empty_info">Please enter full information!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="age_limit_info">Age must be positive and below 120!</string>
    <string name="oib_limit_info">Oib must be positive!</string>
    <string name="favorite">Favorite</string>
    <string name="email_info">Please enter email in correct form!</string>
    <string name="label_phone_number">Phone number</string>
    <string name="phone_number_hint">0981234567</string>
    <string name="label_email">Email address</string>
    <string name="email_hint">username@mail.com</string>
    <string name="settings">Settings</string>
    <string name="label_language">Language selection</string>
    <string name="change">Change</string>
    <string name="default_image" translatable="false">https://www.headshotsprague.com/wp-content/uploads/2019/08/Emotional-headshot-of-aspiring-actress-on-white-background-made-by-Headshots-Prague-1.jpg</string>
    <string name="snackbar_info">Click on item to show full information</string>
    <string name="snackbar_confirmation" translatable="false">OK</string>
</resources>