<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".contacts.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/gray_purple">


        <com.example.domacazadaca1.contacts.add.TextInputView
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:label="@string/label_phone_number"
            app:input="@string/phone_number_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.50" />

<!--        <include layout="@layout/input_edittext"-->
<!--            android:id="@+id/phone_number"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintWidth_percent="0.50"-->
<!--            />-->


        <include layout="@layout/input_edittext"
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            app:layout_constraintWidth_percent="0.50"
            />

        <include layout="@layout/input_edittext"
            android:id="@+id/surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintWidth_percent="0.50"
            />

        <include layout="@layout/input_edittext"
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surname"
            app:layout_constraintWidth_percent="0.50"
            />

        <include layout="@layout/input_edittext"
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age"
            app:layout_constraintWidth_percent="0.50"
            />

        <include layout="@layout/input_edittext"
            android:id="@+id/faculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintWidth_percent="0.50"
            />

        <include layout="@layout/input_edittext"
            android:id="@+id/oib"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/faculty"
            app:layout_constraintWidth_percent="0.50"
            />

        <TextView
            android:id="@+id/gender_label"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/name"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.50"
            app:layout_constraintHorizontal_bias="0"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gender"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.50"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toRightOf="@id/surname"
            app:layout_constraintTop_toBottomOf="@id/gender_label"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/radio_male">
            <RadioButton android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                />
            <RadioButton android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/country_label"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintTop_toTopOf="@id/name"
            app:layout_constraintLeft_toRightOf="@id/surname"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.50"
            app:layout_constraintHorizontal_bias="0"
            />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.50"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/country_label"
            app:layout_constraintLeft_toRightOf="@id/age"
            android:layout_height="wrap_content"
            />

        <CheckBox android:id="@+id/checkbox_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toRightOf="@id/surname"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            />


        <Button
            android:id="@+id/add_button"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_gradient"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>